# Rivio

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/borrow/: page.tsx
frontend/app/card/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/receive/: page.tsx
frontend/app/send/: page.tsx
frontend/app/swap/: page.tsx
frontend/components/: BalancePanel.tsx  LendingPanel.tsx  OnrampPanel.tsx  SwapPanel.tsx  TransferPanel.tsx
frontend/components/layout/: BottomNav.tsx  FloatingNav.tsx  Header.tsx
frontend/components/ui/: ActionBar.tsx  AmountInput.tsx  AssetRow.tsx  BalanceCard.tsx  BankAccountCard.tsx  BeautifulQR.tsx  ChatBubble.tsx  EmptyState.tsx  HealthBar.tsx  Skeleton.tsx  Sparkline.tsx  Spinner.tsx  ThemeToggle.tsx  Toast.tsx  TokenSelector.tsx  TxRow.tsx  VirtualCard.tsx
frontend/contexts/: ThemeContext.tsx
frontend/lib/: aggregator.ts  api.ts  config.ts  enoki.ts  http.ts  mock.ts  navi.ts
migrations/: env.py
migrations/versions/: 41d93c5a61bb_phase0_amount_numeric_and_tx_types.py  75d61d028c56_initial_schema.py  cea3ee011731_phase1_transak_kyc_columns_drop_kyc_.py
src/: __init__.py  config.py  enoki.py  errors.py  prices.py  security.py  sui.py
src/ai/: routes.py  schemas.py  service.py
src/audit/: service.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/db/: main.py  models.py
src/kyc/: dependencies.py  routes.py  schemas.py  service.py
src/lending/: constants.py  routes.py  schemas.py  service.py
src/onramp/: routes.py  schemas.py  service.py
src/swap/: constants.py  routes.py  schemas.py  service.py
src/transactions/: routes.py  schemas.py  service.py
src/wallet/: routes.py  schemas.py
