[project]
name = "velo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "pysui>=0.99.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]


[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
unsafe-fixes = false
respect-gitignore = true

exclude = [
  ".venv",
  "venv",
  "__pycache__",
  "migrations",
  "alembic",
  "reconciliation_report.py"
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "PERF",
  "ASYNC",
  "A",
  "RUF",
  "DTZ",
  "T20",
]

ignore = [
  "E501",
  "B008",
  "B905",
]

[tool.ruff.lint.isort]
known-first-party = ["app", "src"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["F401"]
"tests/**.py" = ["S101", "PLR2004"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
