[project]
name = "velo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "betterproto2==0.9.0",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.27.0",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "pysui>=0.99.1",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.34.0",
    "openai>=1.30.0",
]


[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
unsafe-fixes = false
respect-gitignore = true

exclude = [
  ".venv",
  "venv",
  "__pycache__",
  "migrations",
  "alembic",
  "reconciliation_report.py"
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "PERF",
  "ASYNC",
  "A",
  "RUF",
  "DTZ",
  "T20",
]

ignore = [
  "E501",
  "B008",
  "B905",
]

[tool.ruff.lint.isort]
known-first-party = ["app", "src"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["F401"]
"tests/**.py" = ["S101", "PLR2004"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
